--- a/notebooks/teste.ipynb
+++ b/notebooks/teste.ipynb
@@ -2,10 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "main - linha1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('main - linha1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "main - linha2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('main - linha2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "main - linha3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('main - linha3')"
+   ]
   }
  ],
  "metadata": {
