--- a/notebooks/projeto.ipynb
+++ b/notebooks/projeto.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 108,
    "id": "d10145d2",
    "metadata": {
     "ExecuteTime": {
@@ -39,8 +39,8 @@
     "import numpy   as np\n",
     "import math\n",
     "\n",
+    "from xlsxwriter import Workbook\n",
     "from datetime import datetime\n",
-    "\n",
     "from matplotlib import pyplot as plt"
    ]
   },
